# fast-api-ddd-ready

./: .coverage  .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  mypy.ini  pyproject.toml
app/Contexts/Chat/Conversation/Domain/: Conversation.py  ConversationCreatedEvent.py  ConversationId.py  ConversationOwner.py  ConversationTruncatedEvent.py
app/Contexts/Chat/Infrastructure/Module/: ChatModule.py
app/Contexts/Chat/Infrastructure/Repository/: InMemoryConversationRepository.py  InMemoryMessageRepository.py
app/Contexts/Chat/Message/Domain/: Message.py  MessageChronologyChecker.py  MessageContent.py  MessageCreatedEvent.py  MessageId.py  MessageUpdatedEvent.py
app/Contexts/Shared/Application/Cache/: CacheService.py
app/Contexts/Shared/Domain/: AggregateRoot.py  DomainEvent.py
app/Contexts/Shared/Domain/Clock/: Clock.py
app/Contexts/Shared/Domain/ExceptionHandling/: ExceptionHandler.py
app/Contexts/Shared/Domain/Logging/: Logger.py
app/Contexts/Shared/Domain/ValueObject/: BooleanValueObject.py  DateTimeValueObject.py  EnumValueObject.py  FloatValueObject.py  IntegerValueObject.py  NumericValueObject.py  StringValueObject.py  UUIDValueObject.py  ValueObject.py
app/Contexts/Shared/Infrastructure/Bootstrap/: ApplicationBootstrapper.py  ClassFinder.py  KafkaModule.py
app/Contexts/Shared/Infrastructure/Cache/: InMemoryCacheService.py
app/Contexts/Shared/Infrastructure/ExceptionHandling/: SentryExceptionHandler.py
app/Contexts/Shared/Infrastructure/Http/: Controller.py
app/Contexts/Shared/Infrastructure/Logging/: LoggerConfig.py
app/Contexts/Shared/Infrastructure/Module/: ApplicationModule.py
app/Contexts/Shared/Infrastructure/Settings/: KafkaSettings.py
app/Entrypoint/: TestController.py
docs/: CODE_GUIDELINES.md
docs/shared-context/: README.md  index.md
docs/shared-context/application/: cqrs-buses.md
docs/shared-context/domain/: value-objects.md
docs/shared-context/infrastructure/: grpc-client.md  http-client.md
example/: README.pseudo
scripts/: lint.sh
tests/: conftest.py
tests/Contexts/Chat/Conversation/Domain/: test_conversation.py  test_conversation_id.py  test_conversation_owner.py
tests/Contexts/Chat/Infrastructure/Repository/: test_in_memory_message_repository.py
tests/Entrypoint/: test_test_controller.py
tests/e2e/: test_chat_context_e2e.py  test_simple_endpoint.py
tests/unit/: test_health.py
(+79 files in other folders)
